Run chapter 2 at the book's own shapes, and profile the batch under it
.todo/497 was filed on a README row that said "~1.5 h (projected, not run)":
the chapter-2 Transformer at d_model 512, 6 blocks, 8 heads, batch 64 over the
whole 50000-pair small_parallel_enja split, 20 epochs, 15640 batches. It is now
a measurement -- 89.4 min under --gpu --simd on the GB10, loss 3.555 -> 0.052,
and 14 of the first 20 source sentences translated exactly ("私 は テニス 部員
で す 。" -> "i 'm in the tennis club ."). The device budget holds over that
length: 191 System.gc() requests, every one answered concurrently, 1.5% of the
run in pauses.

The batch underneath it does NOT read like chapter 3's. It is 0.32 s of which
230 ms is device kernel time, so the device is idle about a quarter of it,
against chapter 3's 0.72 of 0.77. The port follows the book's explicit per-head
loop, so a batch is 11029 launches -- 2.9x chapter 3's in a step half as long --
over 1011 parameter tensors, 2289 batched products and 2158 axis folds. What
leaves the device idle is not a host READ (4 downloads a batch, 4 MB: lazy
results hold) but a host WRITE: 247 MB staged UP a batch, and an upload drains
the launch queue before it copies, which is what the batch's 102
cuCtxSynchronize are.

A stack-walking trace on upload/download names them. 183 MB of the 247 is an
array of ZEROS: the reduction adjoint is (linalg:add (linalg:zeros-like x) gk),
a fresh host operand allocated only so a broadcast add will stretch the
gradient back over it -- filed with the numbers as .todo/500, since
linalg::%la-broadcast-to is the same operation with no zeros. The only member
genuinely running on the CPU is the positional encoding's mixed-width add,
which transformer/utils.lisp already explains and chooses.

Also settled at length: the collector question todo-498 could only ask of a
2-epoch run. The same 20 epochs under -XX:+UseParallelGC -Xmn8g take 5571 s
against 5365, byte-identical output, so the concurrent answer wins on this
pro